# Nhom07-403-Day05

./: .gitignore  README.md  docker-compose.yml  render.yaml  spec-draft.md
backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml  railway.toml
backend/agent/: core.py
backend/agent/prompts/: allergen_disclaimer.txt
backend/agent/tools/: __init__.py  data_loader.py  menu.py  order.py
backend/data/mock/: merchant_eval_logs.json  merchant_feedback.json
backend/data/mock/conversations/: happy_path.json
backend/data/mock/ground_truth/: qa_pairs.json
backend/data/mock/menus/: store_001.json
backend/eval/: logger.py
backend/eval/metrics/: accuracy.py  latency.py
backend/eval/scripts/: offline_eval_runner.py
backend/routes/: __init__.py  _eval_log.py  analytics.py  chat.py  eval.py  feedback.py  menu.py
docs/: api-contract.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/merchant/: ChatInterface.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/store/: merchantAuthStore.ts  merchantMenuStore.ts  merchantOrderStore.ts
frontend/src/types/: index.ts
templates/: 02-canvas-template.md  03-user-stories-4path.md  04-eval-metrics.md  05-failure-modes.md  06-roi-3-scenarios.md
xanhsm-project/: docker-compose.yml  run_eval.ps1
xanhsm-project/services/: requirements.txt
xanhsm-project/services/ai-agent/: main.py  requirements.txt
xanhsm-project/services/evaluation/: logger.py  main.py  requirements.txt
(+26 files in other folders)
